--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 quarkus.http.port=8083
+# dev service timezone
+quarkus.keycloak.devservices.container-env.TZ=Europe/Rome
 
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=user
@@ -13,14 +15,13 @@ quarkus.smallrye-graphql.ui.always-include=true
 
 quarkus.container-image.registry=quay.io
 # replace below with your quay.io group!
-quarkus.container-image.group=
+quarkus.container-image.group=edoang
 quarkus.container-image.name=camp-service
-quarkus.container-image.tag=1.0.2
+quarkus.container-image.tag=1.0.3
 
 quarkus.container-image.builder=openshift
 quarkus.openshift.prometheus.generate-service-monitor=false
-# yr namespace!
-quarkus.openshift.namespace=
+quarkus.openshift.namespace=edoanggg-dev
 quarkus.openshift.route.expose=true
 # disable Source 2 Image
 #%s2i.quarkus.container-image.registry=
